--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -51,5 +51,15 @@
     </div>
 
   </div>
-
+  <script>
+    if (window.netlifyIdentity) {
+      window.netlifyIdentity.on("init", user => {
+        if (!user) {
+          window.netlifyIdentity.on("login", () => {
+            document.location.href = "/admin/";
+          });
+        }
+      });
+    }
+  </script>
 </footer>
